--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1298,11 +1298,11 @@
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>MLB</key>
-			<string>FVF026501J90000JC</string>
+			<string></string>
 			<key>ProcessorType</key>
 			<integer>0</integer>
 			<key>ROM</key>
-			<data>vOkv+ZU3</data>
+			<data></data>
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemMemoryStatus</key>
@@ -1310,9 +1310,9 @@
 			<key>SystemProductName</key>
 			<string>MacBookAir9,1</string>
 			<key>SystemSerialNumber</key>
-			<string>FVFCX1YYMNHP</string>
+			<string></string>
 			<key>SystemUUID</key>
-			<string>217BF718-B48A-4271-A16D-6F79A072E900</string>
+			<string></string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
